source_files += gp_aeif/gp_aeif_cond_alpha.cpp\
                gp_aeif/gp_aeif_cond_alpha.h\
                gp_aeif/gp_aeif_cond_exp.cpp\
                gp_aeif/gp_aeif_cond_exp.h\
                gp_aeif/gp_aeif_psc_alpha.cpp\
                gp_aeif/gp_aeif_psc_alpha.h\
                gp_aeif/gp_aeif_psc_exp.cpp\
                gp_aeif/gp_aeif_psc_exp.h
