source_files += ps_aeif/ps_aeif_cond_alpha.cpp\
                ps_aeif/ps_aeif_cond_alpha.h\
                ps_aeif/ps_aeif_cond_exp.cpp\
                ps_aeif/ps_aeif_cond_exp.h\
                ps_aeif/ps_aeif_psc_alpha.cpp\
                ps_aeif/ps_aeif_psc_alpha.h\
                ps_aeif/ps_aeif_psc_exp.cpp\
                ps_aeif/ps_aeif_psc_exp.h
